# radio

./: .gitignore  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/Core/: config.py
backend/DataBase/: session.py
backend/Models/: track_info.py
backend/Repositories/: minio_repository.py  track_repository.py
backend/Routers/: track_router.py  tracks.py
backend/Schemas/: track.py  track_schema.py
backend/Services/: redis_service.py  service.py  track_service.py
backend/migrations/: env.py
backend/migrations/versions/: e3972ad4625a_initial.py
coturn/: turnserver.conf
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: AudioVisualizer.jsx  Orb.jsx  RadioPlayer.jsx  TrackUpdater.jsx  WelcomePage.jsx
frontend/src/styles/: App.css  AudioVisualizer.css  WelcomePage.css
gstreamer/: Dockerfile  play_all_media.py
mediasoup/: Dockerfile  package.json  server.js
nginx/: nginx.conf
